--- a/191008/SelectChatServer/ChatServer2/ServerNetLib/ServerNetLib.vcxproj
+++ b/191008/SelectChatServer/ChatServer2/ServerNetLib/ServerNetLib.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="Define.h" />
     <ClInclude Include="ILog.h" />
     <ClInclude Include="ITcpNetwork.h" />
+    <ClInclude Include="NonCopyable.h" />
     <ClInclude Include="ServerNetErrorCode.h" />
     <ClInclude Include="TcpNetwork.h" />
   </ItemGroup>
