--- a/191008/SelectChatServer/ChatServer2/ServerNetLib/ServerNetLib.vcxproj.filters
+++ b/191008/SelectChatServer/ChatServer2/ServerNetLib/ServerNetLib.vcxproj.filters
@@ -6,6 +6,7 @@
     <ClInclude Include="Define.h" />
     <ClInclude Include="ILog.h" />
     <ClInclude Include="ITcpNetwork.h" />
+    <ClInclude Include="NonCopyable.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TcpNetwork.cpp" />
