쓰레드로 동작하는 Runnable 객체 추가

--- a/191008/SelectChatServer/ChatServer2/ServerNetLib/ServerNetLib.vcxproj
+++ b/191008/SelectChatServer/ChatServer2/ServerNetLib/ServerNetLib.vcxproj
@@ -23,10 +23,12 @@
     <ClInclude Include="ILog.h" />
     <ClInclude Include="ITcpNetwork.h" />
     <ClInclude Include="NonCopyable.h" />
+    <ClInclude Include="Runnable.h" />
     <ClInclude Include="ServerNetErrorCode.h" />
     <ClInclude Include="TcpNetwork.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Runnable.cpp" />
     <ClCompile Include="TcpNetwork.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
